# pywatt_sdk

./: .gitignore  COMPLETION_SUMMARY.md  IMPLEMENTATION_COMPLETION_SUMMARY.md  IMPLEMENTATION_STATUS.md  PHASE2_IMPLEMENTATION_SUMMARY.md  README.md  TODO_COMPLETION_SUMMARY.md  build.rs  python_sdk_plan.md  simple_test.py  test_final_implementations.py  test_phase2_implementations.py  test_remaining_implementations.py
.cursor/rules/: app_state.mdc  app_state_builder.mdc  axum_extractor_lifetimes.mdc  axum_integration.mdc  chat_service.mdc  cli_scaffolder.mdc  codebase_exploration.mdc  configuration.mdc  database.mdc  endpoint_discovery_v2.mdc  error_handling.mdc  finance_service_client_portal.mdc  finance_service_client_requests.mdc  finance_service_ipc_handshake.mdc  finance_service_payment_flow.mdc  finance_service_subscription.mdc  jwt_middleware.mdc  main_instructions.mdc  middleware.mdc  models.mdc  models_client_fields.mdc  module_error_pattern.mdc  module_ipc_handshake.mdc  module_ipc_protocol.mdc  module_ipc_standard.mdc  module_secret_management.mdc  module_stdio_usage.mdc  multipart_form.mdc  oauth_implementation.mdc  oidc_client_configuration.mdc  oidc_endpoint_types.mdc  openid_connect_implementation.mdc  pywatt_module_utils.mdc  pywatt_sdk.mdc  redis_patterns.mdc  remaining_build_issues.mdc  routing.mdc  rule_template.mdc  rust_code_completion.mdc  rust_documentation.mdc  (+22 more)
.cursor/rules/pywatt-module-template/: Cargo.toml  README.md  manifest.toml
.cursor/rules/pywatt-module-template/src/: main.rs
.github/workflows/: python-sdk-conda-ci.yml
.windsurf/rules/: app_state.md  app_state_builder.md  axum_extractor_lifetimes.md  axum_integration.md  chat_service.md  cli_scaffolder.md  codebase_exploration.md  configuration.md  database.md  endpoint_discovery_v2.md  error_handling.md  finance_service_client_portal.md  finance_service_client_requests.md  finance_service_ipc_handshake.md  finance_service_payment_flow.md  finance_service_subscription.md  jwt_middleware.md  main_instructions.md  middleware.md  models.md  models_client_fields.md  module_error_pattern.md  module_ipc_handshake.md  module_ipc_protocol.md  module_ipc_standard.md  module_secret_management.md  module_stdio_usage.md  multipart_form.md  oauth_implementation.md  oidc_client_configuration.md  oidc_endpoint_types.md  openid_connect_implementation.md  pywatt_module_utils.md  pywatt_sdk.md  redis_patterns.md  remaining_build_issues.md  routing.md  rule_template.md  rust_code_completion.md  rust_documentation.md  (+22 more)
python_sdk/: MANIFEST.in  PHASE2_IMPLEMENTATION.md  README.md  environment.yml  module.py  pyproject.toml  setup.py  test_model_manager.py  test_model_manager_simple.py  test_todo_completion.py  test_wattson_compatibility.py
python_sdk/communication/: __init__.py  http_ipc.py  ipc_stdio.py  ipc_types.py  message.py  message_channel.py  metrics.py  tcp_channel.py
python_sdk/core/: __init__.py  bootstrap.py  connection.py  error.py  logging.py  module.py  state.py
python_sdk/data/: cache.py  memcached_cache.py
python_sdk/examples/: model_manager_example.py  phase2_example.py  phase3_example.py  simple_module.py
python_sdk/internal/: messaging.py
python_sdk/pywatt_cli/: __init__.py  cli.py  template_manager.py
python_sdk/security/: jwt_auth.py  secrets.py
python_sdk/services/: __init__.py  registration.py  router_discovery.py  server.py  service_discovery.py
python_sdk/services/model_manager/: __init__.py  api.py  errors.py  generator.py  test_standalone.py
python_sdk/services/model_manager/adapters/: base.py  mysql.py  postgres.py  sqlite.py
python_sdk/tests/: __init__.py  test_core.py
rust_sdk/: Cargo.toml
rust_sdk/docs/: independent_channels.md  module_macro.md
rust_sdk/examples/: guide_example.rs  macro_example.rs
rust_sdk/pywatt_macros/: Cargo.toml  README.md
rust_sdk/pywatt_macros/src/: lib.rs
rust_sdk/src/: build.rs  lib.rs
rust_sdk/src/communication/: README.md  failover.rs  ipc.rs  ipc_channel.rs  ipc_port_negotiation.rs  message.rs  metrics.rs  mod.rs  routing.rs  streaming.rs  tcp_channel.rs  tcp_types.rs
rust_sdk/src/communication/http_ipc/: README.md  improved_mod.rs  improved_result.rs  mod.rs  result.rs
rust_sdk/src/communication/http_tcp/: README.md  client.rs  mod.rs  router.rs
rust_sdk/src/communication/ipc_types/: README.md  mod.rs
rust_sdk/src/core/: README.md  bootstrap.rs  config.rs  error.rs  mod.rs  state.rs
rust_sdk/src/data/: README.md  mod.rs
rust_sdk/src/data/cache/: README.md  file.rs  in_memory.rs  memcached.rs  mod.rs  patterns.rs  proxy_service.rs  redis.rs  tests.rs
rust_sdk/src/data/database/: README.md  mod.rs  mysql.rs  postgres.rs  proxy_connection.rs  sqlite.rs  tests.rs
rust_sdk/src/internal/: README.md  builder.rs  ext.rs  internal_messaging.rs  macros.rs  mod.rs
rust_sdk/src/internal/pywatt_macros/: README.md  mod.rs
rust_sdk/src/security/: README.md  mod.rs
rust_sdk/src/security/jwt_auth/: README.md  error.rs  middleware.rs  mod.rs
rust_sdk/src/security/secret_client/: README.md  client.rs
rust_sdk/src/security/secret_provider/: README.md  metrics.rs
rust_sdk/src/security/secrets/: README.md  mod.rs
rust_sdk/src/services/: README.md  announce.rs  mod.rs  router_discovery.rs  server.rs  service_discovery.rs
rust_sdk/src/services/announce/: announce.rs  mod.rs  router_discovery.rs
rust_sdk/src/services/model_manager/: README.md  config.rs  integration_tests.rs  mod.rs  sdk_integration.rs
rust_sdk/src/services/registration/: README.md  mod.rs
rust_sdk/tests/: announce_tests.rs  bootstrap_tests.rs  database_tests.rs  feature_tests.rs  independent_channels_test.rs  ipc_process_tests.rs  ipc_proxy_tests.rs  ipc_tests.rs  logging_tests.rs  router_discovery_tests.rs  server_tests.rs  state_tests.rs
