[package]
name = "pywatt_module_template"
version = "0.1.0"
edition = "2021"
description = "Template for PyWatt-Rust modules"
authors = ["PyWatt Team"]

[dependencies]
# HTTP server
axum = "0.7.9"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace"] }
hyper = { version = "1.0.1", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["full"] }

# Async
tokio = { version = "1.34.0", features = ["full"] }
futures = "0.3.29"

# Serialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.8.8"

# Logging and metrics
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
prometheus = { version = "0.13.3", features = ["process"] }

# CLI
clap = { version = "4.4.12", features = ["derive"] }

# Error handling
thiserror = "1.0.50"
anyhow = "1.0.75"

[dev-dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
tokio-test = "0.4.3"
